--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,19 @@
+
+nav{
+    position: relative;
+    width: 100%;
+    left:0;
+    box-shadow:0 4px 4px #1f2622;
+    color: bisque;
+    top: 100%#
+}
+#menu{
+    list-style-type: none;
+    font-size: 1.1rem;
+}
+#menu a{
+    text-decoration: none;
+}
 body{
     background-color: #4d5d53;
     color: bisque;
@@ -12,7 +28,7 @@ body{
 }
 #hero{
     background:url("../images/ai-pvBridge3.jpeg") no-repeat center center/cover;
-    position: fixed;
+    position: sticky;
     width: 100%;
     height: 500;
     display: flex;
@@ -28,5 +44,8 @@ flex-wrap: wrap;
 padding top:40px;
 }
 #food{
-    margin-top: 200px;
+    margin-top: 30px;
+    text-align: center;
+    padding: 5%;
+
 }
