--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,6 @@
 
 nav{
-    position: relative;
+    position: sticky;
     width: 100%;
     left:0;
     box-shadow:0 4px 4px #1f2622;
@@ -28,7 +28,7 @@ body{
 }
 #hero{
     background:url("../images/ai-pvBridge3.jpeg") no-repeat center center/cover;
-    position: sticky;
+    position: absolute;
     width: 100%;
     height: 500;
     display: flex;
