--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -43,9 +43,13 @@ text-align: center;
 flex-wrap: wrap;
 padding top:40px;
 }
+
+#food-home{
+    margin:5%;
+    max-width: 10vw;
+}
 #food{
     margin-top: 30px;
     text-align: center;
     padding: 5%;
-
 }
