fix all layout and styling issues

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,14 +7,14 @@ body {
 
 .navbar {
     position: sticky;
-    width: 100%;
     left: 0;
     top: 0;
     box-shadow: 0 4px 4px #1f2622;
     background-color: antiquewhite;
-    z-index: 1000;
+    z-index: 2;
+    overflow: hidden;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     height: 60px;
 }
@@ -53,6 +53,7 @@ body {
     display: flex;
     align-items: flex-end;
     justify-content: center;
+    border-bottom: 1px solid #1f2622;
 }
 
 #hero-text {
@@ -69,11 +70,11 @@ body {
 #welcome h2 {
     font-weight: bolder;
     text-align: center;
-    color: #8fe9b1;
+    color: #e7e9d1;
     width: 100%;
 }
 
-#pv-welcome{
+#pv-welcome {
     font-size: 1em;
     margin: 0 auto;
     padding: 0.5em;
@@ -85,7 +86,9 @@ body {
     text-align: center;
     overflow: hidden;
     padding: 20px;
-}
+    border-top: 3px solid #000000;
+    border-bottom: 1px solid #1f2622;
+    }   
 
 #food-home-img {
     max-width: 10rem;
@@ -95,9 +98,33 @@ body {
     float: left;
 }
 
-
 #drinks {
     background-color: #fff8de;
     color: #4d5d53;
     padding: 20px;
+    text-align: center;
+}
+
+#books {
+    background-color: #fff8de;
+    color: #4d5d53;
+    padding: 20px;
+    text-align: center;
+    border-top: 1px solid #1f2622;
+}
+
+
+/* Footer */
+#social-networks {
+    text-align: center;
+    padding: 20px 0;
+    display: flex;
+    justify-content: space-evenly;
+    list-style-type: none;
+}
+
+#social-networks i {
+    font-size: 160%;
+    padding: 5%;
+    color: #3a3a3a;
 }
