--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -46,7 +46,7 @@ body {
 }
 
 #hero {
-    background: url("../images/ai-pvBridge3.jpeg") no-repeat center center/cover;
+    background: url("../images/pv-front.jpeg") no-repeat center center/cover;
     position: relative;
     width: 100%;
     height: 300px;
