--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -45,8 +45,18 @@ body {
     text-decoration: solid;
 }
 
-#hero {
+#hero-main {
     background: url("../images/pv-front.jpeg") no-repeat center center/cover;
+    position: relative;
+    width: 100%;
+    height: 300px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    border-bottom: 1px solid #1f2622;
+}
+.drinks{
+    background-image: url(../images/pv-beer.png);
     position: relative;
     width: 100%;
     height: 300px;
