--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -56,7 +56,7 @@ body {
     border-bottom: 1px solid #1f2622;
 }
 .drinks{
-    background-image: url(../images/pv-beer.png);
+    background: url("../images/wine-shelves.jpeg") no-repeat center center/cover;
     position: relative;
     width: 100%;
     height: 300px;
