--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');
+
 body {
-    background-color: #4d5d53;
-    color: bisque;
+    background-color: #57653A;
+    color: #e1e4cd;
     margin: 0;
-    font-family: Arial, sans-serif;
+    font-family: Alata, sans-serif;
 }
 
 .navbar {
@@ -81,7 +83,7 @@ body {
 #welcome h2 {
     font-weight: bolder;
     text-align: center;
-    color: #e7e9d1;
+    color: #e1e4cd;
     width: 100%;
 }
 
@@ -92,7 +94,7 @@ body {
 }
 
 #food {
-    background-color: #dce3c7;
+    background-color: #e1e4cd;
     color: #4d5d53;
     text-align: center;
     overflow: hidden;
