fix spelling mistake on index page, update books section with more appropriate title and start to populate food menu.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');
 
 body {
-    background-color: #57653A;
+    background-color: #222917;
     color: #e1e4cd;
     margin: 0;
     font-family: Alata, sans-serif;
