Fix width issues with comment input area and nav bar menu

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,12 +13,14 @@ body {
     font-family: Alata, sans-serif;
 }
 h1{
+    margin-top: 70px;
     font-size: 3rem;
 }
 
 
 .navbar {
     position: fixed;
+    width: 100%;
     left: 0;
     top: 0;
     box-shadow: 0 4px 4px #1f2622;
@@ -204,6 +206,7 @@ h1, p{
 /* feedback */
 #feedback-page{
     flex-grow: 1;
+    width: 100%;
     padding: 20px 10% 0 10%;
     justify-content: center;
     align-items: center;
@@ -237,7 +240,10 @@ h1, p{
     width: 100%;
     text-align: right;
 }
-
+#comments{
+    width: 66%;
+    border-radius: 5px;
+}
 #button-div{
     display: flex;
     justify-content: flex-end;
