--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -75,10 +75,11 @@ h1 {
     position: relative;
     width: 100%;
     height: 300px;
-    display: flex;
+    /* display: flex;
     align-items: flex-end;
-    justify-content: center;
+    justify-content: center; */
     border-bottom: 1px solid #1f2622;
+    color:rgba(252, 252, 252, 0.1)
 }
 
 .drinks {
