--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -302,16 +302,19 @@ button:hover {
     color: #e1e4cd;
 }
 #thanks-text{
-    border: 1px solid #1f2622;
+    border: 1px solid #02180b;
     border-radius: 5px;
-    box-shadow: 0 6px 8px rgba(r3, 51, 3 0.4) ;
+    align-self: center;
+    text-align: center; box-shadow: 0 0 5px rgba(135, 135, 134, 0.4);
+}
+#thanks-text h1{
+    margin-top: 0;
 }
 #close {
     border-radius: 5%;
     background-color: #e1e4cd;
     color: #4d5d53;
     box-shadow: 0 0 5px rgba(135, 135, 134, 0.4);
-    ;
 }
 
 /* Footer */
