--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,8 +17,12 @@ body {
 }
 
 h1 {
-    margin-top: 70px;
+    /*    margin-top: 20%; */
     font-size: 3rem;
+}    
+
+h4 {
+    margin: 20px auto;
 }
 
 .navbar {
@@ -77,7 +81,7 @@ h1 {
     width: 100vw;
     height: 300px;
     border-bottom: 1px solid #1f2622;
-    color:rgba(252, 252, 252, 0.1)
+    color: rgba(252, 252, 252, 0.1)
 }
 
 .drinks {
@@ -90,15 +94,27 @@ h1 {
     justify-content: center;
     border-bottom: 1px solid #1f2622;
 }
-#hot-drinks{
+
+#hot-drinks {
     align-content: center;
+    justify-content: space-between;
 }
-#drinks-menu-block-1{
-    width: 50%;
+
+#drinks-menu-block-1 {
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    flex-direction: column;
 }
-#drinks-menu-block-1 h2{
+
+#flavours{
+    margin: 0 auto;
+}
+#drinks-menu-block-1 h2 {
     line-height: 3em;
 }
+
 #welcome h1,
 #welcome h2,
 h3 {
@@ -146,6 +162,7 @@ h3 {
     border-top: 1px solid #1f2622;
 }
 
+
 .light-menu {
     display: flex;
     flex-direction: column;
@@ -154,7 +171,7 @@ h3 {
     justify-content: center;
 }
 
- .item {
+.item {
     padding: 5%;
     text-align: center;
     width: 40%;
@@ -173,14 +190,14 @@ h1 {
 
 }
 
-#light-menu{
-    /* width: 50%; */
-    padding-right: 10px;
+#light-menu {
+    padding: 0 10%;
 }
-#food-sandwiches{
-    width: 50%;
-    padding-left: 10px;
+
+#food-sandwiches {
+    padding: 0 10%
 }
+
 .text-left {
     flex: 1;
     text-align: left;
@@ -198,6 +215,7 @@ h1 {
     margin-top: -10px;
     margin-bottom: 10px;
 }
+
 h1,
 p {
     text-align: center;
@@ -263,14 +281,17 @@ button:hover {
     background-color: #4d5d53;
     color: #e1e4cd;
 }
-#thanks-text{
+
+#thanks-text {
 
     align-self: center;
-   
+
 }
-#thanks-text h1{
+
+#thanks-text h1 {
     margin-top: 60px;
 }
+
 #close {
     border-radius: 5%;
     background-color: #e1e4cd;
@@ -294,9 +315,11 @@ ul {
     display: flex;
     text-decoration: none;
 }
-footer ul li{
+
+footer ul li {
     text-decoration: none;
 }
+
 #social-networks i {
     display: flex;
     flex-direction: row;
@@ -312,17 +335,33 @@ footer ul li{
     #feedback-page {
         padding: 10% 25%;
     }
+    #drinks-menu-block-1 {
+        width: 60%;
+    }
 
     body {
         height: 100dvh;
     }
+    
+    #food-home-img{
+        display: none;
+    }
+
     #food-menu-block {
         display: flex;
         justify-content: space-around;
     }
-    #light-menu{
-        width: 50%; 
+
+    #light-menu {
+        width: 50%;
+        padding: 12px;
     }
+
+    #food-sandwiches {
+        width: 50%;
+        padding: 12px;
+    }
+
     footer {
         bottom: 0;
         left: 0;
