--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,7 +17,6 @@ body {
 }
 
 h1 {
-    /*    margin-top: 20%; */
     font-size: 3rem;
 }    
 
@@ -95,6 +94,17 @@ h4 {
     border-bottom: 1px solid #1f2622;
 }
 
+#hero-food {
+    background: url("../images/hero-cheese.png") no-repeat center center/cover;
+    position: relative;
+    width: 100%;
+    height: 300px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    border-bottom: 1px solid #1f2622;
+}
+
 #hot-drinks {
     align-content: center;
     justify-content: space-between;
@@ -135,7 +145,7 @@ h3 {
     color: #4d5d53;
     text-align: center;
     padding: 20px;
-    border-top: 3px solid #000000;
+    border-top: 3px solid #1f2622;
     border-bottom: 1px solid #1f2622;
 }
 
@@ -147,14 +157,11 @@ h3 {
     float: left;
 }
 
-#drinks {
-    background-color: #fff8de;
-    color: #4d5d53;
-    padding: 20px;
-    text-align: center;
+#drinks p{
+    margin-top: 20px;
 }
 
-#books {
+#books, #drinks {
     background-color: #fff8de;
     color: #4d5d53;
     padding: 20px;
@@ -187,7 +194,6 @@ h1 {
     display: flex;
     justify-content: space-between;
     margin-bottom: 10px;
-
 }
 
 #light-menu {
@@ -283,9 +289,7 @@ button:hover {
 }
 
 #thanks-text {
-
     align-self: center;
-
 }
 
 #thanks-text h1 {
@@ -316,7 +320,7 @@ ul {
     text-decoration: none;
 }
 
-footer ul li {
+footer> ul> li {
     text-decoration: none;
 }
 
@@ -328,6 +332,10 @@ footer ul li {
     letter-spacing: 4px;
     color: bisque;
     margin: 0 10px;
+    text-decoration: none;
+}
+
+#social-networks a {
     text-decoration: none;
 }
 
